--- a/master/drive/index.html
+++ b/master/drive/index.html
@@ -9,6 +9,7 @@
 
     <title>drive - Rust</title>
 
+    <link rel="stylesheet" type="text/css" href="../rustdoc.css">
     <link rel="stylesheet" type="text/css" href="../main.css">
 
     <link rel="shortcut icon" href="http://maidsafe.net/img/favicon.ico">
@@ -45,7 +46,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-0' class='srclink' href='../src/drive/lib.rs.html#18-46' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-0' class='srclink' href='../src/drive/lib.rs.html#18-50' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'>
 <h1 id='drive' class='section-header'><a href='#drive'>Drive</a></h1>
 <p>A cross platform virtual file-system in userspace (drive) that will appear as a regular drive on the operating system.
@@ -112,6 +113,6 @@ This drive can provide a blocking call to be used as a stand alone application o
     <script src="../jquery.js"></script>
     <script src="../main.js"></script>
     
-    <script async src="../search-index.js"></script>
+    <script defer src="../search-index.js"></script>
 </body>
 </html>
