--- a/master/drive/index.html
+++ b/master/drive/index.html
@@ -26,7 +26,7 @@
     
 
     <nav class="sidebar">
-        <a href='../drive/index.html'><img src='https://raw.githubusercontent.com/maidsafe/QA/master/Images/maidsafe_logo.png' alt='' width='100'></a>
+        <a href='../drive/index.html'><img src='https://raw.githubusercontent.com/maidsafe/QA/master/Images/maidsafe_logo.png' alt='logo' width='100'></a>
         <p class='location'></p><script>window.sidebarCurrent = {name: 'drive', ty: 'mod', relpath: '../'};</script>
     </nav>
 
@@ -46,7 +46,7 @@
             <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                 [<span class='inner'>&#x2212;</span>]
             </a>
-        </span><a id='src-0' class='srclink' href='../src/drive/lib.rs.html#18-50' title='goto source code'>[src]</a></span></h1>
+        </span><a id='src-0' class='srclink' href='../src/drive/src/lib.rs.html#18-50' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'>
 <h1 id='drive' class='section-header'><a href='#drive'>Drive</a></h1>
 <p>A cross platform virtual file-system in userspace (drive) that will appear as a regular drive on the operating system.
@@ -97,7 +97,7 @@ This drive can provide a blocking call to be used as a stand alone application o
 
                 <p>
                     Search functions by type signature (e.g.
-                    <code>vec -> usize</code>)
+                    <code>vec -> usize</code> or <code>* -> vec</code>)
                 </p>
             </div>
         </div>
